# nativefijiplugin

./: CMakeLists.txt  README.md  Readme.txt  compile_java_project.cmd  create_plugin_win.cmd  pom.xml
ch/epfl/cvlab/examples/: SayHelloExample.java
ch/epfl/cvlab/libraryLoader/: LibraryLoader.java
ch/epfl/cvlab/nativePlugin/: GUI.java  Native_Plugin.java
include/: Canny.h  NativeInterface.h
pluginMenuName/: NativePlugin.config
src/: Canny.cpp  NativeInterface.cpp
src/examples/: sayHello.cpp
src/main/c++/: NativeInterface.cpp  NativeInterface.h
src/main/java/ch/epfl/cvlab/nativePlugin/: ImageFormatException.java  ImageHandler.java  ImageNotFoundException.java  NativeWrapper.java  Native_Plugin.java
src/test/c/: cannyMe.cpp
